# pimalaya-release-debug

./: Cargo.toml  flake.nix  install.sh  rust-toolchain.nix  rust-toolchain.toml
.github/workflows/: release.yml
src/: main.rs
