[package]
name = "himalaya"
description = "CLI to manage emails"
version = "1.0.0-beta"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["command-line-interface", "command-line-utilities", "email"]
keywords = ["cli", "mail", "email", "client", "imap"]
homepage = "https://pimalaya.org/himalaya/cli/latest/"
documentation = "https://pimalaya.org/himalaya/cli/latest/"
repository = "https://github.com/soywod/himalaya/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
keyring-lib = { version = "=0.3.2" }
tokio = { version = "1.23", default-features = false, features = ["macros", "rt-multi-thread"] }
